--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>My bookmarks</h1>
+    <h2>My bookmarks</h2>
+    <h3>My bookmarks</h3>
+    <h4>My bookmarks</h4>
+    <h5>My bookmarks</h5>
+    <h6>My bookmarks</h6>
     I'm suffering with CSE
     <script src="script.js"></script>
 </body>
