Create a basec Bookmark

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <h5>My bookmarks</h5>
     <h6>My bookmarks</h6>
     I'm suffering with CSE
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, mollitia! Repellat at eum perspiciatis id asperiores eligendi aliquam ab laudantium, hic expedita commodi vitae velit fugit magni a deserunt nihil?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam neque accusantium quisquam facere quia modi non! Quae alias eveniet provident soluta aperiam deleniti, accusamus similique perspiciatis animi fugiat nihil illo optio nulla laboriosam quidem laudantium numquam dolorem cum. Eius aliquid explicabo ipsa, est accusamus itaque nostrum voluptatibus repellendus quo voluptas unde facere labore odit natus quasi optio. Ullam ducimus, excepturi ipsum aliquid molestiae accusamus quisquam eveniet provident quaerat debitis aliquam sint, assumenda modi commodi dolorum fuga architecto cumque, temporibus expedita? Nemo non sint explicabo eum molestiae inventore mollitia ipsa quidem quaerat, enim molestias assumenda tempore voluptatem numquam consequatur aliquam expedita?</p>
+    <p>Lorem ipsum dolor sit.</p>
     <script src="script.js"></script>
 </body>
 </html>
