table , header, footer

--- a/Image/index.html
+++ b/Image/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <img width="230" height="230" src="yesterday-today-tomorrow.png" alt="yesterday-today-tomorrow flower">
+    <br>
+
+    <table>
+        <caption>Employee Details</caption>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Designation</th>
+                <th>Favourite Language</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Joyoshree Saha</td>
+                <td>Student </td>
+                <td>C++ </td>
+            </tr>
+            <tr>
+                <td>harry </td>
+                <td rowspan="2">Programmer </td>
+                <td>python </td>
+            </tr>
+            <tr>
+                <td>Sam</td>
+                <td rowspan="2">English</td>
+            </tr>
+            <tr>
+                <td colspan="2">altman</td>
+            </tr>
+        </tbody>
+
+        <tfoot> 
+            <tr>
+                <td> Footer</td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
+
 </html>
