--- a/Image/index.html
+++ b/Image/index.html
@@ -47,6 +47,54 @@
             </tr>
         </tfoot>
     </table>
+
+    <h1>Unordered List</h1>
+    <ul>
+        <li>Harry</li>
+        <li>Joyoshree</li>
+        <li>Joy</li>
+    </ul>
+
+    <h1>Ordered List</h1>
+    <ol>
+        <li>Harry</li>
+        <li>Joyoshree</li>
+        <li>Joy</li>
+    </ol>  
+    <h1>Ordered List</h1>
+    <ol type="I">
+        <li>Harry</li>
+        <li>Joyoshree</li>
+        <li>Joy</li>
+    </ol> 
+    <h1>Ordered List</h1>
+    <ol type="i">
+        <li>Harry</li>
+        <li>Joyoshree</li>
+        <li>Joy</li>
+    </ol> 
+ <h1>Ordered List</h1>
+    <ol type="A">
+        <li>Harry</li>
+        <li>Joyoshree</li>
+        <li>Joy</li>
+    </ol> 
+    <h1>Ordered List</h1>
+    <ol type="a">
+        <li>Harry</li>
+        <li>Joyoshree</li>
+        <li>Joy</li>
+    </ol>
+    <h1>Unordered List</h1>
+    <ul type = "square">
+        <li>Harry</li>
+        <li>Joyoshree</li>
+        <li>Joy</li>
+    </ul>
+
+    
+    
+
 </body>
 
 </html>
